tests/front_end/input/variable_use_analysis/errors/variable_redefined.wl
//E<4:5>: Variable `i` already declared at line 3, column 5
int main() {
    int i = 1;
    int i = 2;
    return i + i;
}
